Autofocus the first control of edit nodes

--- a/woost/admin/ui/editview.ui
+++ b/woost/admin/ui/editview.ui
@@ -52,6 +52,16 @@
             member: newValue.editSchema,
             value: newValue.item
         };
+
+        this.addEventListener(
+            "nodeExposed",
+            () => {
+                this.editForm.awaitFields().then(() => {
+                    this.editForm.focusFirstControl();
+                });
+            },
+            {once: true}
+        );
     }
     ?>
 
