Added the Thumbnail class

--- a/woost/admin/ui/layout.ui
+++ b/woost/admin/ui/layout.ui
@@ -11,6 +11,7 @@
     <ui:requires component="cocktail.ui.navigation"/>
     <ui:requires component="cocktail.ui.Lock"/>
     <ui:requires component="cocktail.ui.Notice"/>
+    <ui:requires component="woost.admin.ui.Thumbnail"/>
     <ui:requires component="woost.admin.ui.ItemLink"/>
     <ui:requires component="woost.admin.ui.ItemCard"/>
     <ui:requires component="woost.admin.ui.ItemSetSelector"/>
