Added an "editing" indicator to woost.app

--- a/woost/admin/ui/blocksview.ui
+++ b/woost/admin/ui/blocksview.ui
@@ -61,7 +61,7 @@
 
     getPreviewURL() {
         if (this.editedModel.isSchema(woost.models.Publishable)) {
-            return this.editedItem.url;
+            return URI(this.editedItem._url).addQuery({"woost.admin.edit": 1});
         }
     }
     ?>
